--- a/appointment.html
+++ b/appointment.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appointment</title>
-     <!-- bootstrap CSS file -->
-     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-     <!-- font-awesome CSS file -->
-     <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
-     <!-- default CSS file -->
-     <link rel="stylesheet" href="assets/css/default.css" />
-     <!-- style CSS file -->
-     <link rel="stylesheet" href="assets/css/style.css" />
-     <!-- responsive CSS file -->
-     <link rel="stylesheet" href="assets/css/responsive.css" />
+    <!-- bootstrap CSS file -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <!-- font-awesome CSS file -->
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+    <!-- default CSS file -->
+    <link rel="stylesheet" href="assets/css/default.css" />
+    <!-- style CSS file -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- responsive CSS file -->
+    <link rel="stylesheet" href="assets/css/responsive.css" />
 </head>
+
 <body>
-<!-- main-container area start -->
+    <!-- main-container area start -->
     <div class="main-container">
         <!-- left-sidebar start -->
         <div class="left-sidebar">
@@ -33,7 +35,7 @@
                     <li>
                         <a href="index.html">
                             <i class="fa fa-home" aria-hidden="true"></i>
-                                Home
+                            Home
                         </a>
                     </li>
                     <li>
@@ -43,7 +45,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="index.html">
+                        <a href="appointment.html">
                             <i class="fa fa-calendar" aria-hidden="true"></i>
                             Appointment
                         </a>
@@ -75,55 +77,55 @@
         </div>
         <!-- left-sidebar end -->
         <!-- content area stert -->
-        <div class="main-body">   
-                    <header class="header-area">
-                        <div class="d-flex align-items-center">
-                            <div class="menu-btn">
-                                <i class="fa fa-bars" aria-hidden="true"></i>
-                            </div>
-                            <h2 class="header-title search-result">Appointment</h2>
+        <div class="main-body">
+            <header class="header-area">
+                <div class="d-flex align-items-center">
+                    <div class="menu-btn">
+                        <i class="fa fa-bars" aria-hidden="true"></i>
+                    </div>
+                    <h2 class="header-title search-result">Appointment</h2>
+                </div>
+                <div class="right-side">
+                    <div class="notification-wrap">
+                        <span class="notification">
+                            <img class="notific-btn" src="assets/images/icons/notification.svg" alt="notifaction">
+                        </span>
+                        <div class="notification-item">
+                            <ul>
+                                <li class="notific-list">
+                                    <a href="index.html">
+                                        <img class="message-img" src="assets/images/home/message-02.png" alt="message">
+                                        <div class="message-content">
+                                            <h3>Dr. David</h3>
+                                            <p>Let me see your last month...</p>
+                                            <span>3.30pm</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="notific-list">
+                                    <a href="index.html">
+                                        <img class="message-img" src="assets/images/home/message-02.png" alt="message">
+                                        <div class="message-content">
+                                            <h3>Dr. David</h3>
+                                            <p>Let me see your last month...</p>
+                                            <span>3.30pm</span>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
-                        <div class="right-side">
-                            <div class="notification-wrap">
-                                <span class="notification">
-                                    <img class="notific-btn" src="assets/images/icons/notification.svg" alt="notifaction">
-                                </span>
-                                <div class="notification-item">
-                                    <ul>
-                                        <li class="notific-list">
-                                            <a href="index.html">
-                                                <img class="message-img" src="assets/images/home/message-02.png" alt="message">
-                                            <div class="message-content">
-                                                <h3>Dr. David</h3>
-                                                <p>Let me see your last month...</p>
-                                                <span>3.30pm</span>
-                                            </div> 
-                                            </a>
-                                        </li>
-                                        <li class="notific-list">
-                                            <a href="index.html">
-                                                <img class="message-img" src="assets/images/home/message-02.png" alt="message">
-                                            <div class="message-content">
-                                                <h3>Dr. David</h3>
-                                                <p>Let me see your last month...</p>
-                                                <span>3.30pm</span>
-                                            </div> 
-                                            </a>
-                                        </li>
-                                    </ul>   
-                                </div>
-                            </div>
-                            <div class="profile-btn">
-                                <img src="assets/images/home/profile-img.png" alt="profile-img">
-                                <span>John Doe</span>
-                                <ul class="profile-wrep">
-                                    <li><a href="index.html">My Profile</a></li>
-                                    <li><a href="index.html">Settings</a></li>
-                                    <li><a href="index.html">Sign out</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </header>  
+                    </div>
+                    <div class="profile-btn">
+                        <img src="assets/images/home/profile-img.png" alt="profile-img">
+                        <span>John Doe</span>
+                        <ul class="profile-wrep">
+                            <li><a href="index.html">My Profile</a></li>
+                            <li><a href="index.html">Settings</a></li>
+                            <li><a href="index.html">Sign out</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </header>
             <div class="appointment-area mt-30">
                 <div class="appointment-wrep text-center">
                     <img class="profile-img" src="assets/images/home/profile-img-01.png" alt="profile-img">
@@ -132,28 +134,33 @@
                     <p class="online"> Available now</p>
                     <!-- if online then class name online  -->
                     <!-- if offline then class name offline  -->
-             
+
                 </div>
                 <div class="row">
                     <div class="col-xl-4 offset-xl-4 col-lg-6 offset-lg-3 col-md-6 offset-md-3 col-12">
                         <ul class="appointment-date ">
-                            <li><p>Appointment Date: </p><span>26 February</span></li>
-                            <li><p>Appointment Time:</p> <span>Wednesday 7:00 PM</span></li>
-                            <li><p>Appointment Type:</p> <span>Online</span></li>
+                            <li>
+                                <p>Appointment Date: </p><span>26 February</span>
+                            </li>
+                            <li>
+                                <p>Appointment Time:</p> <span>Wednesday 7:00 PM</span>
+                            </li>
+                            <li>
+                                <p>Appointment Type:</p> <span>Online</span>
+                            </li>
                         </ul>
                     </div>
-                  </div>
-                
+                </div>
+
                 <ul class="appointment-item">
                     <li><a class="voice-btn" href="voice.html"><button>Voice Call</button></a></li>
                     <li> <a class="video-btn" href="video.html"><button>Video Call</button></a></li>
                     <li> <a class="message-btn" href="message.html"><button>Message</button></a></li>
                 </ul>
             </div>
-
-        <!-- content area end -->
+            <!-- content area end -->
         </div>
-   </div>
+    </div>
     <!-- JS here -->
     <!-- jquery-1.12.4.min core JS file -->
     <script src="assets/js/jquery-1.12.4.min.js"></script>
@@ -163,4 +170,5 @@
     <!-- custom core JS file -->
     <script src="assets/js/custom.js"></script>
 </body>
+
 </html>
