--- a/doctor.html
+++ b/doctor.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>doctor profile</title>
-     <!-- bootstrap CSS file -->
-     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-     <!-- font-awesome CSS file -->
-     <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
-     <!-- default CSS file -->
-     <link rel="stylesheet" href="assets/css/default.css" />
-     <!-- style CSS file -->
-     <link rel="stylesheet" href="assets/css/style.css" />
-     <!-- responsive CSS file -->
-     <link rel="stylesheet" href="assets/css/responsive.css" />
+    <!-- bootstrap CSS file -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <!-- font-awesome CSS file -->
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+    <!-- default CSS file -->
+    <link rel="stylesheet" href="assets/css/default.css" />
+    <!-- style CSS file -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- responsive CSS file -->
+    <link rel="stylesheet" href="assets/css/responsive.css" />
 </head>
+
 <body>
     <!-- main-container area start -->
     <div class="main-container">
@@ -33,32 +35,32 @@
                     <li>
                         <a href="index.html">
                             <i class="fa fa-home" aria-hidden="true"></i>
-                                Home
-                          </a>
+                            Home
+                        </a>
                     </li>
                     <li>
                         <a href="search.html">
                             <i class="fa fa-search" aria-hidden="true"></i>
                             Search
-                          </a>
+                        </a>
                     </li>
                     <li>
                         <a href="appointment.html">
                             <i class="fa fa-calendar" aria-hidden="true"></i>
                             Appointment
-                          </a>
+                        </a>
                     </li>
                     <li>
                         <a href="profile.html">
                             <i class="fa fa-user" aria-hidden="true"></i>
                             Profile
-                          </a>
+                        </a>
                     </li>
                     <li>
                         <a href="index.html">
                             <i class="fa fa-cog" aria-hidden="true"></i>
                             Settings
-                          </a>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -99,24 +101,24 @@
                                 <li class="notific-list">
                                     <a href="index.html">
                                         <img class="message-img" src="assets/images/home/message-02.png" alt="message">
-                                    <div class="message-content">
-                                        <h3>Dr. David</h3>
-                                        <p>Let me see your last month...</p>
-                                        <span>3.30pm</span>
-                                    </div> 
+                                        <div class="message-content">
+                                            <h3>Dr. David</h3>
+                                            <p>Let me see your last month...</p>
+                                            <span>3.30pm</span>
+                                        </div>
                                     </a>
                                 </li>
                                 <li class="notific-list">
                                     <a href="index.html">
                                         <img class="message-img" src="assets/images/home/message-02.png" alt="message">
-                                    <div class="message-content">
-                                        <h3>Dr. David</h3>
-                                        <p>Let me see your last month...</p>
-                                        <span>3.30pm</span>
-                                    </div> 
+                                        <div class="message-content">
+                                            <h3>Dr. David</h3>
+                                            <p>Let me see your last month...</p>
+                                            <span>3.30pm</span>
+                                        </div>
                                     </a>
                                 </li>
-                            </ul>   
+                            </ul>
                         </div>
                     </div>
                     <div class="profile-btn">
@@ -128,7 +130,7 @@
                             <li><a href="index.html">Sign out</a></li>
                         </ul>
                     </div>
-                 </div>
+                </div>
             </header>
             <!-- doctor-profile area start -->
             <section class="doctor-profile">
@@ -140,13 +142,15 @@
                                 <div class="profile-text">
                                     <h2>Dr. Vicky Chadda</h2>
                                     <h4>MBBS, FCPS </h4>
-                                    <span><img src="assets/images/icons/doler-icon.svg" alt="doler-icon">$59.00 per hour</span>
+                                    <span><img src="assets/images/icons/doler-icon.svg" alt="doler-icon">$59.00 per
+                                        hour</span>
                                     <a href="bookingdoctor.html">
                                         <h3>Book Appointment<i class="fa fa-arrow-right" aria-hidden="true"></i></h3>
                                     </a>
                                 </div>
                                 <div class="sergen">
-                                    <button class="sergen-btn"><img src="assets/images/icons/sergeon.svg" alt="sergeon"> Medical Sergeon</button>
+                                    <button class="sergen-btn"><img src="assets/images/icons/sergeon.svg" alt="sergeon">
+                                        Medical Sergeon</button>
                                     <div class="sergen-icon">
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -159,45 +163,46 @@
                             </div>
                             <div class="about-area">
                                 <h3>About Me</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                     Vestibulum scelerisque aliquet mattis auctor.
-                                     Metus pellentesque pulvinar nulla interdum imperdiet. Porttitor risus feugiat nisi,
-                                      nunc faucibus. Proin mus bibendum diam facilisis sem sollicitudin sed. 
-                                      Odio enim convallis
-                                     ullamcorper diam amet egestas odio etiam et. </p>
-                                     <div class="about-itam mt-25">
-                                        <div class="row">
-                                            <div class="col-xl-6 col-md-6 col-12">
-                                                <div class="experiene">
-                                                    <h2>Work & Experience</h2>
-                                                    <span>2020- Present (2 years)</span>
-                                                    <h3>Surgiscope Clinic & Medical</h3>
-                                                    <span>2020- Present (2 years)</span>
-                                                    <h3>New IBN Sina Hospital & Diagnostic</h3>
-                                                </div>    
+                                    Metus pellentesque pulvinar nulla interdum imperdiet. Porttitor risus feugiat nisi,
+                                    nunc faucibus. Proin mus bibendum diam facilisis sem sollicitudin sed.
+                                    Odio enim convallis
+                                    ullamcorper diam amet egestas odio etiam et. </p>
+                                <div class="about-itam mt-25">
+                                    <div class="row">
+                                        <div class="col-xl-6 col-md-6 col-12">
+                                            <div class="experiene">
+                                                <h2>Work & Experience</h2>
+                                                <span>2020- Present (2 years)</span>
+                                                <h3>Surgiscope Clinic & Medical</h3>
+                                                <span>2020- Present (2 years)</span>
+                                                <h3>New IBN Sina Hospital & Diagnostic</h3>
                                             </div>
-                                            <div class="col-xl-6 col-md-6 col-12">
-                                                <div class="specialitie">
-                                                    <h2>Specialities</h2>
-                                                    <ul>
-                                                        <li>Women’s health services</li>
-                                                        <li>Pregnancy care</li>
-                                                        <li>Surgical Procedures</li>
-                                                        <li>Speciality care</li>
-                                                    </ul>
-                                                </div> 
+                                        </div>
+                                        <div class="col-xl-6 col-md-6 col-12">
+                                            <div class="specialitie">
+                                                <h2>Specialities</h2>
+                                                <ul>
+                                                    <li>Women’s health services</li>
+                                                    <li>Pregnancy care</li>
+                                                    <li>Surgical Procedures</li>
+                                                    <li>Speciality care</li>
+                                                </ul>
                                             </div>
-                                     </div>
-                                     </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-4 ">
                         <div class="profile-addres">
                             <div class="map-location">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d58436.59365084692!2d90.33257147910156!3d23.737139200000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1635573421526!5m2!1sen!2sbd" width="100%;" height="200px;" 
-                                style="border-radius: 12px; border: none;"
-                                 allowfullscreen="" loading="lazy"></iframe>
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d58436.59365084692!2d90.33257147910156!3d23.737139200000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1635573421526!5m2!1sen!2sbd"
+                                    width="100%;" height="200px;" style="border-radius: 12px; border: none;"
+                                    allowfullscreen="" loading="lazy"></iframe>
                             </div>
                             <ul>
                                 <li class="addres-itam">
@@ -236,7 +241,8 @@
                                     <div class="location-text">
                                         <h3>CSCR Surgical Center</h3>
                                         <p>MDS- Curdiology, BDS</p>
-                                        <span><i class="fa fa-map-marker" aria-hidden="true"></i>1245 Street Down, Yonkers</span>
+                                        <span><i class="fa fa-map-marker" aria-hidden="true"></i>1245 Street Down,
+                                            Yonkers</span>
                                         <h3>Monday to Friday</h3>
                                         <p>10:00 AM - 3:30 PM</p>
                                         <h3>Sunday</h3>
@@ -250,7 +256,8 @@
                                     <div class="location-text">
                                         <h3>CSCR Surgical Center</h3>
                                         <p>MDS- Curdiology, BDS</p>
-                                        <span><i class="fa fa-map-marker" aria-hidden="true"></i>1245 Street Down, Yonkers</span>
+                                        <span><i class="fa fa-map-marker" aria-hidden="true"></i>1245 Street Down,
+                                            Yonkers</span>
                                         <h3>Monday to Friday</h3>
                                         <p>10:00 AM - 3:30 PM</p>
                                         <h3>Sunday</h3>
@@ -277,8 +284,8 @@
                                     </div>
                                 </div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                     Vestibulum scelerisque aliquet mattis auctor. 
-                                     Metus pellentesque pulvinar.</p>
+                                    Vestibulum scelerisque aliquet mattis auctor.
+                                    Metus pellentesque pulvinar.</p>
                             </div>
                             <div class="recent-reviews-wrep mt-25">
                                 <img src="assets/images/home/reviews-02.png" alt="reviews">
@@ -294,8 +301,8 @@
                                     </div>
                                 </div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                     Vestibulum scelerisque aliquet mattis auctor. 
-                                     Metus pellentesque pulvinar.</p>
+                                    Vestibulum scelerisque aliquet mattis auctor.
+                                    Metus pellentesque pulvinar.</p>
                             </div>
                             <div class="recent-reviews-wrep mt-25">
                                 <img src="assets/images/home/reviews-03.png" alt="reviews">
@@ -311,22 +318,16 @@
                                     </div>
                                 </div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                     Vestibulum scelerisque aliquet mattis auctor. 
-                                     Metus pellentesque pulvinar.</p>
+                                    Vestibulum scelerisque aliquet mattis auctor.
+                                    Metus pellentesque pulvinar.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- doctor-profile area end -->
-
-
-
-
-
-
         </div>
-  </div>         
+    </div>
     <!-- JS here -->
     <!-- jquery-1.12.4.min core JS file -->
     <script src="assets/js/jquery-1.12.4.min.js"></script>
@@ -336,4 +337,5 @@
     <!-- custom core JS file -->
     <script src="assets/js/custom.js"></script>
 </body>
+
 </html>
